--- a/MothAphotheaShopAPI/appsettings.json
+++ b/MothAphotheaShopAPI/appsettings.json
@@ -5,6 +5,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "Jwt": {
+        "Key": "moth-moth-moth-moth-moth-moth-moth-moth",
+        "Issuer": "moth-aphothea-shop-api",
+        "Audience": "moths"
+    },
     "ConnectionStrings": { "MySqlConnection": "server=localhost;database=mothapotheadb;user=root;password=admin" },
     "AllowedHosts": "*"
 }
